src/metrics/snapshots/big_code_analysis__metrics__npm__tests__python_empty_class_no_methods.snap
---
source: src/metrics/npm.rs
assertion_line: 2141
expression: metric.npm
---
{
  "classes": 0.0,
  "interfaces": 0.0,
  "class_methods": 0.0,
  "interface_methods": 0.0,
  "classes_average": null,
  "interfaces_average": null,
  "total": 0.0,
  "total_methods": 0.0,
  "average": null
}
