src/metrics/snapshots/big_code_analysis__metrics__npm__tests__ruby_class_with_inheritance.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "class_npm_sum": 2,
  "interface_npm_sum": 0,
  "class_methods": 2,
  "interface_methods": 0,
  "class_coa": 1.0,
  "interface_coa": 0.0,
  "total": 2,
  "total_methods": 2,
  "coa": 1.0
}
