src/metrics/snapshots/big_code_analysis__metrics__npm__tests__ruby_multiple_classes.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "classes": 1,
  "interfaces": 0,
  "class_methods": 3,
  "interface_methods": 0,
  "class_coa": 0.3333333333333333,
  "interface_coa": 0.0,
  "total": 1,
  "total_methods": 3,
  "coa": 0.3333333333333333
}
