src/metrics/snapshots/big_code_analysis__metrics__npm__tests__ruby_one_private_method.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "classes": 0,
  "interfaces": 0,
  "class_methods": 1,
  "interface_methods": 0,
  "class_coa": 0.0,
  "interface_coa": 0.0,
  "total": 0,
  "total_methods": 1,
  "coa": 0.0
}
