src/metrics/snapshots/big_code_analysis__metrics__npm__tests__ruby_shadowed_keyword_is_a_variable_in_every_position.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "class_npm_sum": 4,
  "interface_npm_sum": 0,
  "class_methods": 4,
  "interface_methods": 0,
  "class_coa": 1.0,
  "interface_coa": 0.0,
  "total": 4,
  "total_methods": 4,
  "coa": 1.0
}
